name:                my-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/azaryabernard/
author:              Azarya Bernard Haposan
maintainer:          azarya.haposan@tum.de
copyright:           2022 Azarya Bernard Haposan
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGELOG.md

executable main
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
